# src/controllers/v1/utilidades/UsuarioAPI.ts
@@ -1,7 +1,7 @@
 import {Usuario} from '../../../entity/Usuario';
 
 export class UsuarioAPI {
-  id: number;
+  id: string;
   username: string;
   role: string;
 
@@ -10,4 +10,15 @@ export class UsuarioAPI {
     this.username = usuario.username;
     this.role = usuario.role;
   }
+}
+
+export interface UsuarioCreationRequest {
+  username: string;
+  password: string;
+  role: string;
+}
+
+export interface UsuarioUpdateRequest {
+  username?: string;
+  role?: string;
 }
